Use StandardCharsets
Simplifies code as there is no UnsupportedEncodingException in this
case.

Change-Id: I33c6c53b1ee58c30f3fbd54fda15445d5944d146