@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2010, 2015 David Green and others.
+ * Copyright (c) 2010, 2022 David Green and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -13,8 +13,8 @@
 
 package org.eclipse.mylyn.wikitext.mediawiki.internal;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.text.MessageFormat;
 import java.util.Collections;
 import java.util.HashMap;
@@ -70,12 +70,7 @@ public abstract class AbstractMediaWikiLanguage extends AbstractMarkupLanguage {
 			return pageId;
 		}
 		if (internalLinkPattern.contains("index.php?")) { //$NON-NLS-1$
-			try {
-				pageId = URLEncoder.encode(pageId, "UTF-8"); //$NON-NLS-1$
-			} catch (UnsupportedEncodingException e) {
-				throw new IllegalStateException(MessageFormat.format(
-						Messages.getString("AbstractMediaWikiLanguage_cannotComputeUrl"), pageId), e); //$NON-NLS-1$
-			}
+			pageId = URLEncoder.encode(pageId, StandardCharsets.UTF_8);
 		}
 		if (QUALIFIED_INTERNAL_LINK.matcher(pageId).matches()) {
 			Matcher matcher = STANDARD_EXTERNAL_LINK_FORMAT.matcher(internalLinkPattern);
